src/Components/MainPage/MainPage.css
@keyframes slideRight {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

.profile_and_group_box {
  display: grid;
  grid-template-columns: 25% 75%;
}

.group_box {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  outline: 1px solid black;
  height: 5%;
}

.group_chat_list {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  outline: 1px solid black;
  flex-wrap: wrap;
  flex-direction: column;
  height: 100vh;
  background-color: lightskyblue;
}

.search-container {
  position: relative;
  display: flex;
  align-items: center;
  margin-top: 2%;
  margin-bottom: 2%;
}

.search-icon {
  position: absolute;
  left: 10px;
  pointer-events: none;
  width: 20px;
  height: auto; /* Makes the icon non-interactive */
}

.search-container input[type="text"] {
  padding-left: 30px; /* Adjust padding to make room for the icon */
  width: 100%;
}

.chat_list_box {
  justify-content: flex-start;
  width: 100%;
  display: flex;
  outline: 1px solid black;
}

.input-box {
  border-radius: 50px;
  outline: 3px solid black;
}

.profile_box_image {
  width: 20px;
  height: auto;
  margin-right: 5%;
  margin-left: 5%;
}

.profile_box_text {
  position: relative;
  top: 8px;
}

.text_box {
  position: relative;
}

.input_chat_box {
  display: flex;
  flex-direction: column;
}

.chat_box {
  height: 92%;
}

.input_message_box {
  width: 95%;
  border-radius: 50px;
}

.input_message_button {
  width: 5%;
  height: 100%;
  color: blue;
  border-radius: 50px;
}

